# scrcpy-wrapper

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
src/config/: conf.rs
src/ui/: main.rs  style.rs
src/ui/components/: audio.rs  config.rs  connect_method.rs  control.rs  exe_info.rs  mod.rs  others.rs  output.rs  performance.rs  video.rs  virtual_display.rs
src/util/: args.rs  config_status.rs  mod.rs
